@@ -3,7 +3,6 @@ package org.irods.jargon.core.unittest;
 import org.irods.jargon.core.packinstr.AbstractIRODSPackingInstructionTest;
 import org.irods.jargon.core.packinstr.AuthReqPluginRequestInpTest;
 import org.irods.jargon.core.packinstr.CollInpTest;
-import org.irods.jargon.core.packinstr.DataObjCloseInpTest;
 import org.irods.jargon.core.packinstr.DataObjCopyInpTest;
 import org.irods.jargon.core.packinstr.DataObjInpForMcollTest;
 import org.irods.jargon.core.packinstr.DataObjInpForObjStatTest;
@@ -11,8 +10,6 @@ import org.irods.jargon.core.packinstr.DataObjInpForRegTest;
 import org.irods.jargon.core.packinstr.DataObjInpForUnmountTest;
 import org.irods.jargon.core.packinstr.DataObjInpForUnregisterTest;
 import org.irods.jargon.core.packinstr.DataObjInpTest;
-import org.irods.jargon.core.packinstr.DataObjReadTest;
-import org.irods.jargon.core.packinstr.DataObjWriteInpTest;
 import org.irods.jargon.core.packinstr.ExecCmdStreamCloseTest;
 import org.irods.jargon.core.packinstr.ExecCmdTest;
 import org.irods.jargon.core.packinstr.ExecMyRuleInp_PITest;
@@ -39,21 +36,19 @@ import org.junit.runners.Suite;
 @RunWith(Suite.class)
 @Suite.SuiteClasses({ AbstractIRODSPackingInstructionTest.class,
 		GenQueryInpTest.class, DataObjInpTest.class, CollInpTest.class,
-		DataObjCloseInpTest.class, DataObjCopyInpTest.class,
-		DataObjWriteInpTest.class, GeneralAdminInpTest.class,
-		ExecCmdTest.class, DataObjReadTest.class, OpenedDataObjInpTest.class,
-		ModAvuMetadataInpTest.class, ExecMyRuleInp_PITest.class,
-		UserAdminInpTest.class, StructFileExtAndRegInpTest.class,
-		FileReadInpTest.class, ExecCmdStreamCloseTest.class,
-		SimpleQueryInpTest.class, SimpleQueryInpTest.class,
-		ModAccessControlInpTest.class, GetTempPasswordInTest.class,
-		TransferOptionsTest.class, DataObjInpForObjStatTest.class,
-		GetTempPasswordForOtherTest.class, DataObjInpForRegTest.class,
-		DataObjInpForUnregisterTest.class, DataObjInpForMcollTest.class,
-		DataObjInpForUnmountTest.class, ReconnMsgTest.class,
-		SpecificQueryInpTest.class, PamAuthRequestInpTest.class,
-		SSLStartInpTest.class, SSLEndInpTest.class,
-		AuthReqPluginRequestInpTest.class })
+		DataObjCopyInpTest.class, GeneralAdminInpTest.class, ExecCmdTest.class,
+		OpenedDataObjInpTest.class, ModAvuMetadataInpTest.class,
+		ExecMyRuleInp_PITest.class, UserAdminInpTest.class,
+		StructFileExtAndRegInpTest.class, FileReadInpTest.class,
+		ExecCmdStreamCloseTest.class, SimpleQueryInpTest.class,
+		SimpleQueryInpTest.class, ModAccessControlInpTest.class,
+		GetTempPasswordInTest.class, TransferOptionsTest.class,
+		DataObjInpForObjStatTest.class, GetTempPasswordForOtherTest.class,
+		DataObjInpForRegTest.class, DataObjInpForUnregisterTest.class,
+		DataObjInpForMcollTest.class, DataObjInpForUnmountTest.class,
+		ReconnMsgTest.class, SpecificQueryInpTest.class,
+		PamAuthRequestInpTest.class, SSLStartInpTest.class,
+		SSLEndInpTest.class, AuthReqPluginRequestInpTest.class })
 public class PackingInstructionTests {
 
 }
